Update Legend2.png, LegendBC.png, and 3 more files...

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -1,165 +1,144 @@
 
-* {
-    box-sizing: border-box;
+/** {*/
+/*    box-sizing: border-box;*/
+/*}*/
+html{
+    margin: 0;
 }
 
 body {
+    margin: 0;
+    padding: 0 0 0 0;
     font-family: Arial, Helvetica, sans-serif;
+    /*overflow: hidden;*/
 }
 
-.bannerImage{
-
-    max-height: 13vh;
+p {
+  margin-top: 0.5vh;
 }
 
-.dingImage{
-    /*padding-top: 1vh;*/
-    float: left;
-    padding-left: 2vw;
-    max-width: 25vw;
-}
-
-.promenadeImage{
-    max-width: 40vw;
-
-    /*height: 12vh;*/
-    /*display: block;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-}
-.licitImage{
-    padding-top: 1vh;
-    float: right;
-    padding-right: 2vh;
-    max-width: 25vw;
-
-}
-section{
-    /*background: #3e8e41;*/
-}
-/* Style the header */
-header {
-    float: top;
-    /*background-color: #666;*/
-    padding-top: 1vh;
-    /*padding: 1vh;*/
+.myHeader {
+    position: absolute;
+    top: 0;
+    max-height: 12vh;
+    width: 97vw;
+    display: grid;
+    grid-template-columns: auto 45vw auto;
+    grid-column-gap: 2vw;
+    grid-template-rows:  auto;
     text-align: center;
-    /*font-size: 35px;*/
-    color: white;
-    max-height: 16vh;
-    min-height: 15vh;
+    align-items: center;
+    /*color: white;*/
+    padding: 0 1vw 0 1vw;
 }
 
-header div{
-    float: left
+.headerImage {
+    width: 100%;
+    max-height: 12vh;
+    object-fit: cover;
 }
 
-section::before {
-    content: "";
-    display: table;
-    clear: both;
-}
-/* Create two columns/boxes that floats next to each other */
-nav {
-    float: left;
-    width: 10vw;
+.myContent{
+    position: absolute;
+    top: 13vh;
     height: 84vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 16vw auto;
+    grid-column-gap: 0.5vw;
+    grid-template-rows: auto;
     text-align: center;
-    /*height: 300px; !* only for demonstration, should be removed *!*/
-    /*background: #ccc;*/
-    padding: 1vw;
+    /*align-items: center;*/
+    /*color: white;*/
+    padding: 0 0 0 0;
 }
 
-/* Style the list inside the menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
+.commandMenu{
+    width: 100%;
+    height: 100%;
 }
 
-.mapClass {
-    float: right;
-    padding: 20px;
-    width: 87vw;
+.mapContainer {
+    width: 100%;
+    height: 100%;
     background-color: #f1f1f1;
-    /*height: 300px; !* only for demonstration, should be removed *!*/
-    min-height: 84vh;
 }
 
-/* Clear floats after the columns */
-section::after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 /* Style the footer */
 footer {
+    position: absolute;
+    bottom: 0;
+    height: 3vh;
+    width: 100vw;
+    /*top: 90vh;*/
     background: #3e8e41;
     /*background-color: #777;*/
-    padding: 0.5vw;
+    /*padding: 0.5vw;*/
     text-align: left;
     color: white;
 }
 
-/*!* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens *!*/
-/*@media (max-width: 600px) {*/
-/*    nav, article {*/
-/*        width: 100%;*/
-/*        height: auto;*/
-/*    }*/
-/*}*/
 
-.button {
-    width: 7vw;
-    margin-top: 1vh;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    background-color: #4CAF50; /* Green */
+.button{
+    width: 100%;
+    height: 4vh;
+    margin-bottom: 0.5vh;
+    margin-top: 0.5vh;
+
     border: none;
     color: white;
-    padding: 15px 0.5vw;
     text-align: center;
     text-decoration: none;
     display: block;
     max-font-size: 16px;
     cursor: pointer;
+}
+
+.myFieldset{
+    align-items: center;
+    text-align: center;
+    align-content: center;
+    padding: 0.5vh 0.5vh 0.5vh 0.5vh;
+    width: 90%;
+}
+
+.active-button {
+    background-color: #4CAF50; /* Green */
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
 
 .disabled-button {
-    width: 7vw;
-    margin-top: 1vh;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
     background-color: #3c423c; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 0.5vw;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    max-font-size: 16px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
 }
 
-.button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+.active-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
-.button:active {
+
+.active-button:active {
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
 
-.legendImage{
-    max-width: 7vw;
+.picker{
+    margin:auto;
+    width: 90%;
+}
+
+.legendImage {
+    max-width: 100%;
     max-height: 30vh;
 }
 
-.radio-button-menu{
+h4 {
+    margin-top: 2vh;
+    margin-bottom: 0.4vh;
+}
+
+.radio-button-menu {
     text-align: left;
 }
 
@@ -168,8 +147,8 @@ footer {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 40px;
+    height: 20px;
     vertical-align: middle
 
 }
@@ -197,34 +176,36 @@ footer {
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
 }
 
 input:checked + .slider {
-    background-color: #3e8e41;
+    background-color: #4CAF50;
 }
 
 input:focus + .slider {
-    box-shadow: 0 0 1px #3e8e41;
+    box-shadow: 0 0 1px #4CAF50;
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
 }
 
 /* Rounded sliders */
 .slider.round {
-    border-radius: 34px;
+    border-radius: 50px;
 }
 
 .slider.round:before {
     border-radius: 50%;
 }
+
+
